[package]
name = "key"
license = "MIT"
version = "0.2.0"
description = "Cli to a local or remote keepass database"
authors = ["Tim Havlicek"]
keywords = ["keepass", "s3", "password"]
edition = "2021"
repository = "https://github.com/luckydye/key.git"
homepage = "https://github.com/luckydye/key"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive", "env"] }
demand = "1.1.0"
env_logger = "0.11.3"
keepass = { version = "0.7.7", features = ["save_kdbx4"] }
log = "0.4.21"
minio = "0.1.0"
tokio = "1.36.0"
url = "2.5.0"
