[package]
name = "key"
license = "MIT"
version = "1.2.7"
description = "Cli to a local or remote keepass database"
authors = ["Tim Havlicek"]
keywords = ["keepass", "s3", "password"]
edition = "2021"
repository = "https://github.com/luckydye/key.git"
homepage = "https://github.com/luckydye/key"

[lib]
name = "key"
crate-type = ["cdylib", "rlib"]

[features]
default = [
  "cli", "wasm"
]
cli = ["dep:clap", "dep:tokio", "dep:minio", "dep:home"]
wasm = [
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
]

[dependencies]
anyhow = "1.0.81"
colored = "2.1.0"
copypasta = "0.10.1"
demand = "1.1.0"
env_logger = "0.11.3"
keepass = { version = "0.7.7", features = ["save_kdbx4", "serialization"] }
log = "0.4.21"
random-string = "1.1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
totp-rs = { version = "5.5.1", features = ["otpauth", "steam"] }
url = "2.5.0"
getrandom = { version = "0.2.15", features = ["js"] }
# wasm
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = { version = "0.2.84", optional = true }
wasm-bindgen-futures = { version = "0.4.42", optional = true }
# cli
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5.3", features = ["derive", "env"], optional = true }
tokio = { version = "1.36.0", features = ["full"], optional = true }
minio = { version = "0.1.0", optional = true }
home = { version = "0.5.11", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
