[package]
name = "key"
license = "MIT"
version = "1.2.3"
description = "Cli to a local or remote keepass database"
authors = ["Tim Havlicek"]
keywords = ["keepass", "s3", "password"]
edition = "2021"
repository = "https://github.com/luckydye/key.git"
homepage = "https://github.com/luckydye/key"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive", "env"] }
demand = "1.1.0"
env_logger = "0.11.3"
home = "0.5.9"
keepass = { version = "0.7.7", features = ["save_kdbx4"] }
log = "0.4.21"
minio = "0.1.0"
random-string = "1.1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = "1.36.0"
totp-rs = { version = "5.5.1", features = ["otpauth", "steam"] }
url = "2.5.0"
